--- a/package.json
+++ b/package.json
@@ -44,10 +44,8 @@
   "dependencies": {
     "@wix/wix-axios-config": "latest",
     "axios": "^0.19.0",
-    "i18next": "^19.1.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0",
-    "react-i18next": "^11.3.2"
+    "react-dom": "16.12.0"
   },
   "jest": {
     "preset": "jest-yoshi-preset"
