--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
   },
   "dependencies": {
     "@wix/wix-axios-config": "latest",
+    "@wix/wix-base-ui": "^3.1083.0",
     "axios": "^0.19.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "wix-ui-icons-common": "^2.0.312"
   },
   "jest": {
     "preset": "jest-yoshi-preset"
